# algorun

./: .gitignore  CMakeLists.txt  build.sh  test.sh  toolchain.cmake
cmake/: gbenchmark.cmake
src/: CMakeLists.txt
src/common/: test_utility.h
src/pramp/: CMakeLists.txt
src/pramp/Array Quadruplet/: README.md  solution_cubic.h  solution_cubic_and_log.h  solution_naive.h  solution_quadratic.h
src/pramp/Array Quadruplet/tests/: CMakeLists.txt  benchmark.cpp  test.cpp  test_generator.h
src/pramp/Find The Duplicates/: README.md  solution_linear.h  solution_linearithmic.h
src/pramp/Find The Duplicates/tests/: CMakeLists.txt  benchmark.cpp  test.cpp  test_generator.h
src/pramp/Sentence Reverse/: README.md  solution_indexes.h  solution_iterators.h
src/pramp/Sentence Reverse/tests/: CMakeLists.txt  benchmark.cpp  test.cpp  test_generator.h
